@@ -1169,7 +1169,6 @@ void Client::Handle_Connect_OP_SendExpZonein(const EQApplicationPacket *app)
 
 	//No idea why live sends this if even were not in a guild
 	SendGuildMOTD();
-	SpawnMercOnZone();
 
 	return;
 }
@@ -1227,8 +1226,7 @@ void Client::Handle_Connect_OP_WearChange(const EQApplicationPacket *app)
 
 void Client::Handle_Connect_OP_WorldObjectsSent(const EQApplicationPacket *app)
 {
-	//This is a copy of SendExpZonein created for SoF due to packet order change
-	//This does not affect clients other than SoF
+	//This is a copy of SendExpZonein created for SoF+ due to packet order change
 
 	//////////////////////////////////////////////////////
 	// Spawn Appearance Packet
@@ -1295,7 +1293,10 @@ void Client::Handle_Connect_OP_WorldObjectsSent(const EQApplicationPacket *app)
 	//No idea why live sends this if even were not in a guild
 	SendGuildMOTD();
 
-	SpawnMercOnZone();
+	if (RuleB(Mercs, AllowMercs))
+	{
+		SpawnMercOnZone();
+	}
 
 	return;
 }
@@ -9314,7 +9315,7 @@ void Client::Handle_OP_MercenaryCommand(const EQApplicationPacket *app)
 	uint32 merc_command = mc->MercCommand;	// Seen 0 (zone in with no merc or suspended), 1 (dismiss merc), 5 (normal state), 20 (unknown), 36 (zone in with merc)
 	int32 option = mc->Option;	// Seen -1 (zone in with no merc), 0 (setting to passive stance), 1 (normal or setting to balanced stance)
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Command %i, Option %i received.", merc_command, option);
+	Log.Out(Logs::General, Logs::Mercenaries, "Command %i, Option %i received.", merc_command, option);
 
 	if (!RuleB(Mercs, AllowMercs))
 		return;
@@ -9348,7 +9349,7 @@ void Client::Handle_OP_MercenaryCommand(const EQApplicationPacket *app)
 					merc->SetStance(mercTemplate->Stances[option]);
 					GetMercInfo().Stance = mercTemplate->Stances[option];
 
-					Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Set Stance: %u", merc->GetStance());
+					Log.Out(Logs::General, Logs::Mercenaries, "Set Stance: %u", merc->GetStance());
 				}
 			}
 		}
@@ -9371,7 +9372,7 @@ void Client::Handle_OP_MercenaryDataRequest(const EQApplicationPacket *app)
 	uint32 merchant_id = mmsr->MercMerchantID;
 	uint32 altCurrentType = 19;
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Data Request for Merchant ID (%i)", merchant_id);
+	Log.Out(Logs::General, Logs::Mercenaries, "Data Request for Merchant ID (%i)", merchant_id);
 
 	//client is requesting data about currently owned mercenary
 	if (merchant_id == 0) {
@@ -9379,12 +9380,12 @@ void Client::Handle_OP_MercenaryDataRequest(const EQApplicationPacket *app)
 		//send info about your current merc(s)
 		if (GetMercInfo().mercid)
 		{
-			Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: SendMercPersonalInfo Request");
+			Log.Out(Logs::General, Logs::Mercenaries, "SendMercPersonalInfo Request");
 			SendMercPersonalInfo();
 		}
 		else
 		{
-			Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: SendMercPersonalInfo Not Sent - MercID (%i)", GetMercInfo().mercid);
+			Log.Out(Logs::General, Logs::Mercenaries, "SendMercPersonalInfo Not Sent - MercID (%i)", GetMercInfo().mercid);
 		}
 	}
 
@@ -9497,7 +9498,7 @@ void Client::Handle_OP_MercenaryDataUpdateRequest(const EQApplicationPacket *app
 		return;
 	}
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Data Update Request Received.");
+	Log.Out(Logs::General, Logs::Mercenaries, "Data Update Request Received.");
 
 	if (GetMercID())
 	{
@@ -9523,7 +9524,7 @@ void Client::Handle_OP_MercenaryDismiss(const EQApplicationPacket *app)
 		Command = VARSTRUCT_DECODE_TYPE(uint8, InBuffer);
 	}
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Dismiss Request ( %i ) Received.", Command);
+	Log.Out(Logs::General, Logs::Mercenaries, "Dismiss Request ( %i ) Received.", Command);
 
 	// Handle the dismiss here...
 	DismissMerc(GetMercInfo().mercid);
@@ -9548,7 +9549,7 @@ void Client::Handle_OP_MercenaryHire(const EQApplicationPacket *app)
 	uint32 merc_unk1 = mmrq->MercUnk01;
 	uint32 merc_unk2 = mmrq->MercUnk02;
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Template ID (%i), Merchant ID (%i), Unknown1 (%i), Unknown2 (%i)", merc_template_id, merchant_id, merc_unk1, merc_unk2);
+	Log.Out(Logs::General, Logs::Mercenaries, "Template ID (%i), Merchant ID (%i), Unknown1 (%i), Unknown2 (%i)", merc_template_id, merchant_id, merc_unk1, merc_unk2);
 
 	//HirePending = true;
 	SetHoTT(0);
@@ -9614,7 +9615,7 @@ void Client::Handle_OP_MercenarySuspendRequest(const EQApplicationPacket *app)
 	SuspendMercenary_Struct* sm = (SuspendMercenary_Struct*)app->pBuffer;
 	uint32 merc_suspend = sm->SuspendMerc;	// Seen 30 for suspending or unsuspending
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Suspend ( %i ) received.", merc_suspend);
+	Log.Out(Logs::General, Logs::Mercenaries, "Suspend ( %i ) received.", merc_suspend);
 
 	if (!RuleB(Mercs, AllowMercs))
 		return;
@@ -9634,7 +9635,7 @@ void Client::Handle_OP_MercenaryTimerRequest(const EQApplicationPacket *app)
 		return;
 	}
 
-	Log.Out(Logs::General, Logs::Mercenaries, "Mercenary Debug: Timer Request received.");
+	Log.Out(Logs::General, Logs::Mercenaries, "Timer Request received.");
 
 	if (!RuleB(Mercs, AllowMercs)) {
 		return;
